--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
+    "d3-delaunay": "^6.0.4",
     "d3-geo": "^3.1.1",
     "d3-geo-projection": "^4.0.0",
     "polygon-clipping": "^0.15.7",
